@@ -1,12 +1,10 @@
 package me.nexo.factories.menu;
 
-import me.nexo.core.utils.NexoColor;
+import me.nexo.core.crossplay.CrossplayUtils;
 import me.nexo.factories.NexoFactories;
 import me.nexo.factories.core.ActiveFactory;
 import me.nexo.protections.NexoProtections;
 import me.nexo.protections.core.ProtectionStone;
-import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
-import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.Sound;
@@ -19,86 +17,69 @@ import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class FactoryMenu implements Listener {
 
     private final NexoFactories plugin;
-    public static final String TITLE_PLAIN = "» Panel de Control";
-    public static final String MENU_TITLE = "&#1c0f2a<bold>»</bold> &#00f5ffPanel de Control";
 
     public FactoryMenu(NexoFactories plugin) {
         this.plugin = plugin;
     }
 
     public void openMenu(Player player, ActiveFactory factory) {
-        Inventory inv = Bukkit.createInventory(null, 27, NexoColor.parse(MENU_TITLE));
+        Inventory inv = Bukkit.createInventory(null, 27, CrossplayUtils.parseCrossplay(player, plugin.getConfigManager().getMessage("menus.factory.titulo")));
 
         ProtectionStone stone = NexoProtections.getClaimManager().getStoneById(factory.getStoneId());
         String energyStatus = (stone != null) ? "&#00f5ff" + stone.getCurrentEnergy() + " ⚡" : "&#8b0000Desconectada";
 
-        // 📊 PANEL DE INFORMACIÓN (Slot 11)
         ItemStack info = new ItemStack(Material.REPEATER);
         ItemMeta infoMeta = info.getItemMeta();
         if (infoMeta != null) {
-            infoMeta.setDisplayName(serialize("&#ff00ff<bold>" + factory.getFactoryType() + "</bold>"));
-            infoMeta.setLore(serializeList(Arrays.asList(
-                    "&#1c0f2aNivel de Estructura: &#00f5ff" + factory.getLevel(),
-                    "&#1c0f2aEstado: " + getStatusColor(factory.getCurrentStatus()),
-                    "&#1c0f2aRed Eléctrica: " + energyStatus,
+            infoMeta.displayName(CrossplayUtils.parseCrossplay(player, "&#ff00ff<bold>" + factory.getFactoryType() + "</bold>"));
+            List<String> lore = List.of(
+                    plugin.getConfigManager().getMessage("menus.factory.info.nivel").replace("%level%", String.valueOf(factory.getLevel())),
+                    plugin.getConfigManager().getMessage("menus.factory.info.estado").replace("%status%", getStatusColor(factory.getCurrentStatus())),
+                    plugin.getConfigManager().getMessage("menus.factory.info.red-electrica").replace("%energy_status%", energyStatus),
                     " ",
-                    "&#1c0f2aAutoridad: &#1c0f2a" + Bukkit.getOfflinePlayer(factory.getOwnerId()).getName()
-            )));
+                    plugin.getConfigManager().getMessage("menus.factory.info.autoridad").replace("%owner_name%", Bukkit.getOfflinePlayer(factory.getOwnerId()).getName())
+            );
+            infoMeta.lore(lore.stream().map(line -> CrossplayUtils.parseCrossplay(player, line)).collect(Collectors.toList()));
             info.setItemMeta(infoMeta);
         }
         inv.setItem(11, info);
 
-        // 🌟 MÓDULO CATALIZADOR (Slot 13)
         ItemStack catalyst = new ItemStack(Material.LODESTONE);
         ItemMeta catMeta = catalyst.getItemMeta();
         if (catMeta != null) {
-            catMeta.setDisplayName(serialize("&#00f5ff<bold>Módulo de Mejora</bold>"));
+            catMeta.displayName(CrossplayUtils.parseCrossplay(player, plugin.getConfigManager().getMessage("menus.factory.mejora.titulo")));
             String catName = factory.getCatalystItem().equals("NONE") ? "&#8b0000Vacante" : "&#00f5ff" + factory.getCatalystItem();
-            catMeta.setLore(serializeList(Arrays.asList(
-                    "&#1c0f2aInserta una Tarjeta Lógica para",
-                    "&#1c0f2aaumentar el rendimiento base.",
-                    " ",
-                    "&#1c0f2aInstalado: " + catName,
-                    " ",
-                    "&#ff00ff(Próximamente: Inserción de módulos)"
-            )));
+            List<String> loreConfig = plugin.getConfigManager().getMessages().getStringList("menus.factory.mejora.lore");
+            catMeta.lore(loreConfig.stream().map(line -> CrossplayUtils.parseCrossplay(player, line.replace("%catalyst_name%", catName))).collect(Collectors.toList()));
             catalyst.setItemMeta(catMeta);
         }
         inv.setItem(13, catalyst);
 
-        // 📦 ALMACENAMIENTO DE PRODUCCIÓN (Slot 15)
         ItemStack output = new ItemStack(Material.CHEST);
         ItemMeta outputMeta = output.getItemMeta();
         if (outputMeta != null) {
-            outputMeta.setDisplayName(serialize("&#ff00ff<bold>Producción Almacenada</bold>"));
-            outputMeta.setLore(serializeList(Arrays.asList(
-                    "&#1c0f2aActivos listos para extraer: &#00f5ff" + factory.getStoredOutput(),
-                    " ",
-                    factory.getStoredOutput() > 0 ? "&#00f5ff▶ Haz clic para recolectar" : "&#8b0000Bandeja de salida vacía."
-            )));
+            outputMeta.displayName(CrossplayUtils.parseCrossplay(player, plugin.getConfigManager().getMessage("menus.factory.produccion.titulo")));
+            List<String> loreConfig = plugin.getConfigManager().getMessages().getStringList("menus.factory.produccion.lore");
+            String action = factory.getStoredOutput() > 0 ? plugin.getConfigManager().getMessage("menus.factory.produccion.accion-recolectar") : plugin.getConfigManager().getMessage("menus.factory.produccion.bandeja-vacia");
+            loreConfig.add(action);
+            outputMeta.lore(loreConfig.stream().map(line -> CrossplayUtils.parseCrossplay(player, line.replace("%stored_output%", String.valueOf(factory.getStoredOutput())))).collect(Collectors.toList()));
             output.setItemMeta(outputMeta);
         }
         inv.setItem(15, output);
 
-        // 💻 BOTÓN DEL TERMINAL LÓGICO (Slot 22)
         ItemStack logicBtn = new ItemStack(Material.COMMAND_BLOCK);
         ItemMeta logicMeta = logicBtn.getItemMeta();
         if (logicMeta != null) {
-            logicMeta.setDisplayName(serialize("&#ff00ff<bold>Terminal de Lógica</bold>"));
-            logicMeta.setLore(serializeList(Arrays.asList(
-                    "&#1c0f2aAutomatiza la operativa mediante",
-                    "&#1c0f2acondiciones y scripts visuales.",
-                    " ",
-                    "&#00f5ff▶ Clic para programar rutinas"
-            )));
+            logicMeta.displayName(CrossplayUtils.parseCrossplay(player, plugin.getConfigManager().getMessage("menus.factory.terminal.titulo")));
+            List<String> loreConfig = plugin.getConfigManager().getMessages().getStringList("menus.factory.terminal.lore");
+            logicMeta.lore(loreConfig.stream().map(line -> CrossplayUtils.parseCrossplay(player, line)).collect(Collectors.toList()));
             logicBtn.setItemMeta(logicMeta);
         }
         inv.setItem(22, logicBtn);
@@ -115,75 +96,48 @@ public class FactoryMenu implements Listener {
         };
     }
 
-    private String serialize(String hex) {
-        return LegacyComponentSerializer.legacySection().serialize(NexoColor.parse(hex));
-    }
-
-    private List<String> serializeList(List<String> hexList) {
-        List<String> out = new ArrayList<>();
-        for (String s : hexList) out.add(serialize(s));
-        return out;
-    }
-
     @EventHandler
     public void onClick(InventoryClickEvent event) {
-        String plainTitle = PlainTextComponentSerializer.plainText().serialize(event.getView().title());
-        if (!plainTitle.equals(TITLE_PLAIN)) return;
+        if (!CrossplayUtils.getChatPlain((Player) event.getWhoClicked(), event.getView().title()).equals(plugin.getConfigManager().getMessage("menus.factory.titulo").replaceAll("<[^>]*>", ""))) return;
 
         event.setCancelled(true);
-
         Player player = (Player) event.getWhoClicked();
 
-        // 1. Recolectar Producción
         if (event.getSlot() == 15) {
             Block target = player.getTargetBlockExact(5);
             if (target == null) return;
-
             ActiveFactory factory = plugin.getFactoryManager().getFactoryAt(target.getLocation());
             if (factory == null) return;
-
             if (factory.getStoredOutput() <= 0) {
                 player.playSound(player.getLocation(), Sound.ENTITY_VILLAGER_NO, 1f, 1f);
                 return;
             }
-
             int amount = factory.getStoredOutput();
             ItemStack reward = null;
             String nexoItemId = factory.getFactoryType() + "_OUTPUT";
-
             try {
                 if (com.nexomc.nexo.api.NexoItems.itemFromId(nexoItemId) != null) {
                     reward = com.nexomc.nexo.api.NexoItems.itemFromId(nexoItemId).build();
                 }
             } catch (NoClassDefFoundError | Exception ignored) {}
-
             if (reward == null) {
                 reward = new ItemStack(Material.IRON_INGOT);
             }
-
             reward.setAmount(amount);
-
             factory.clearOutput();
             plugin.getFactoryManager().saveFactoryStatusAsync(factory);
-
             HashMap<Integer, ItemStack> left = player.getInventory().addItem(reward);
             if (!left.isEmpty()) {
                 player.getWorld().dropItemNaturally(player.getLocation(), left.get(0));
             }
-
             player.playSound(player.getLocation(), Sound.ENTITY_PLAYER_LEVELUP, 1f, 2f);
-            player.sendMessage(NexoColor.parse("&#00f5ff<bold>¡EXTRACCIÓN EXITOSA!</bold> &#1c0f2aHas obtenido &#ff00ff" + amount + " activos&#1c0f2a."));
+            CrossplayUtils.sendMessage(player, plugin.getConfigManager().getMessage("eventos.extraccion-exitosa").replace("%amount%", String.valueOf(amount)));
             player.closeInventory();
-        }
-
-        // 2. Abrir Terminal de Lógica
-        else if (event.getSlot() == 22) {
+        } else if (event.getSlot() == 22) {
             Block target = player.getTargetBlockExact(5);
             if (target == null) return;
-
             ActiveFactory factory = plugin.getFactoryManager().getFactoryAt(target.getLocation());
             if (factory == null) return;
-
             plugin.getLogicMenu().openMenu(player, factory);
         }
     }
